왜 로그인이 안될까... 꽤 간단해 보이는데 안됨..

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -17,6 +17,15 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 
 <body>
+
+<h2>회원 전용 페이지</h2>
+ID : <span sec:authentication="name"></span> <br>
+소유 권한 : <span sec:authentication="authorities"></span> <br>
+
+<form id="logout" action="/logout" method="POST">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+    <input type="submit" value="로그아웃"/>
+</form>
     <!-- HIDDEN PANEL 
 ================================================== -->
     <div id="panel">
@@ -88,8 +97,8 @@
                         <a th:href="@{/login}">
                             <button class="login button">로그인</button>
                         </a>
-
                     </li>
+
                 </ul>
             </nav>
         </div>
