--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -115,6 +115,7 @@
     <div class="migrant1">
 
         <form th:action="@{/login}" method="post" class="loginForm">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <h2>로그인</h2>
         <div th:if="${param.error}" class="alert alert-danger" role="alert">
             존재하지 않는 아이디와 비밀번호 입니다.
@@ -123,7 +124,7 @@
             로그아웃 되셨습니다.
         </div>
         <div class="idForm">
-            <input type="text" name="userid" class="id" placeholder="아이디">
+            <input type="text" name="username" class="id" placeholder="아이디">
         </div>
         <div class="passForm">
             <input type="password" name="password" class="pw" placeholder="비밀번호">
@@ -135,7 +136,7 @@
     </div>
     <div class="bottomText">
         나누모아가 처음이십니까? <br><br>
-        <a th:href="@{/join}"><button class="btn lnsert1">회원가입</button></a>
+        <a th:href="@{/signup}"><button class="btn lnsert1">회원가입</button></a>
     </div>
 
     <!-- FOOOTER ================================================== -->
