--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -4,7 +4,7 @@
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -76,7 +76,7 @@
                 <li>
                     <a href="#">모드니로</a>
                     <ul>
-                        <li><a th:href="@{/many_find}">자주 찾는 일의 종류</a></li>
+                        <li><a th:href="@{/many/find}">자주 찾는 일의 종류</a></li>
                         <li><a th:href="@{/elements}">투자자 문의</a></li>
                         <li><a th:href="@{/typography}">사업자 문의</a></li>
                     </ul>
@@ -84,12 +84,21 @@
                 <li>
                     <a th:href="@{/help}">고객문의</a>
                 </li>
-                <li>
+                <!--                    <li>-->
+                <!--                        <span sec:authentication="name"></span>님 환영합니다.-->
+                <!--                    </li>-->
+                <li sec:authorize="isAnonymous()">
                     <a th:href="@{/login}">
                         <button class="login button">로그인</button>
                     </a>
-
                 </li>
+                <li sec:authorize="isAuthenticated()">
+                    <form id="logout" action="/logout" method="POST">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="submit" class="login button" value="로그아웃"/>
+                    </form>
+                </li>
+
             </ul>
         </nav>
     </div>
