--- a/src/main/resources/templates/farmer1.html
+++ b/src/main/resources/templates/farmer1.html
@@ -67,7 +67,7 @@
                 <li>
                     <a href="#">이주노동자</a>
                     <ul>
-                        <li><a th:href="@{/migrant1}">일하기</a></li>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
                         <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                         <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
@@ -128,28 +128,28 @@
             <div class="eight columns noleftmargin">
                 <div class="six columns">
                     <div class="boxblog">
-                        <tr>
-
-                            <th>
-                                <h5>제목</h5>
+                        <tr >
+                            <th >
+                                <h5>[분류작업]춘천시 안낭농가</h5>
                             </th>
                             <th>
                                 <p class="small date">
-                                    작성일자
+                                    [안낭농가에서 사람을 구합니다.]
                                     <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
                                 </p>
                             </th>
                             <th>
                                 <p>
-                                    <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/nivo3.jpg" alt="" class="thumb"> 작성일
+                                    <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/nivo3.jpg" alt="" class="thumb">    장소 : 춘천시 화암읍 542번지
+
                                 </p>
                             </th>
                             <th>
-                                입력내용
+                                Posted on: 9 Oct 2021
                             </th>
                             <th>
                                 <p>
-                                    <a th:href="@{/farmer/detail}" class="small continue">Continue reading</a>
+                                    <a href="#" class="small continue">Continue reading</a>
                                 </p>
                             </th>
                         </tr>
@@ -157,14 +157,21 @@
                 </div>
                 <div class="six columns">
                     <div class="boxblog">
-                        <h5> Field Marshal</h5>
+                        <th>
+                        <h5>[지게차 일꾼] 철원군 지게차 단기직</h5>
+                        </th>
                         <p class="small date">
-                            Posted on: 3 Oct 2013 <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
+                            [지게차 운전수 단기직을 구합니다.]
+
+                             <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
                         </p>
                         <p>
-                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio3.jpg" alt="" class="thumb"> She was the Field Marshal of the Front Porch Knitting Needle Hussars, nicknamed "Hussies." Her approbation was olive oil;
-                            her discountenance prickly heat. "Of course," she added, "while recognizing that expatiation ...
+                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio3.jpg" alt="" class="thumb"> 장소 : 철원군 지원면 301번지
+
                         </p>
+                        <th>
+                            Posted on: 10 Oct 2021
+                        </th>
                         <p>
                             <a href="#" class="small continue">Continue reading</a>
                         </p>
@@ -172,14 +179,20 @@
                 </div>
                 <div class="six columns">
                     <div class="boxblog">
-                        <h5>Lady Speedway</h5>
+                        <th>
+                        <h5>[가을 마늘 수확] 화천군 수확 작업</h5>
+                        </th>
                         <p class="small date">
-                            Posted on: 2 Oct 2013 <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
+                            [수확작업을 함께해주실 단기직을 구합니다.]
+                            <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
                         </p>
                         <p>
-                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio4.jpg" alt="" class="thumb">"ARE you comin' to the dawncin', Lady Speedway?" asked the American in his best transatlantic liner accent. "Most decidedly
-                            not!" Mind you, this answer from Lady Speedway meant red lights ahead. At the Hotel Biscuit ...
+                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio4.jpg" alt="" class="thumb">   장소 : 화천군 모용리 425번지 김상엽
+
                         </p>
+                        <th>
+                            Posted on: 11 Oct 2021
+                        </th>
                         <p>
                             <a href="#" class="small continue">Continue reading</a>
                         </p>
@@ -187,14 +200,20 @@
                 </div>
                 <div class="six columns">
                     <div class="boxblog">
-                        <h5>Hotel Biscuit</h5>
+                        <th>
+                        <h5>[잣 분류작업] 고성군 잣 분류작업 구합니다.</h5>
+                        </th>
                         <p class="small date">
-                            Posted on: 3 Oct 2013 <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
+                            [1개월 일하실 잣 분류작업 구합니다.]
+                             <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
                         </p>
                         <p>
-                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio6.jpg" alt="" class="thumb"> She was the Field Marshal of the Front Porch Knitting Needle Hussars, nicknamed "Hussies." Her approbation was olive oil;
-                            her discountenance prickly heat. "Of course," she added, "while recognizing that expatiation ...
+                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio6.jpg" alt="" class="thumb">  장소 : 고성군 만하리 담합 221번지
+
                         </p>
+                        <th>
+                            Posted on: 10 Oct 2021
+                        </th>
                         <p>
                             <a href="#" class="small continue">Continue reading</a>
                         </p>
@@ -202,14 +221,20 @@
                 </div>
                 <div class="six columns">
                     <div class="boxblog">
-                        <h5>Private Theater</h5>
+                        <th>
+                        <h5>[신입가능] 양양군 하우스 작업</h5>
+                        </th>
                         <p class="small date">
-                            Posted on: 2 Oct 2013 <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
+                            [신입도 가능한 양양군 하우스 작업을 구합니다.]
+                            <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
                         </p>
                         <p>
-                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio3.jpg" alt="" class="thumb">"ARE you comin' to the dawncin', Lady Speedway?" asked the American in his best transatlantic liner accent. "Most decidedly
-                            not!" Mind you, this answer from Lady Speedway meant red lights ahead. At the Hotel Biscuit ...
+                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/folio3.jpg" alt="" class="thumb">   장소 : 양양군 편옥면 231- 45번지
+
                         </p>
+                        <th>
+                            Posted on: 9 Oct 2021
+                        </th>
                         <p>
                             <a href="#" class="small continue">Continue reading</a>
                         </p>
@@ -217,14 +242,21 @@
                 </div>
                 <div class="six columns">
                     <div class="boxblog">
-                        <h5>Transatlantic</h5>
+                        <th>
+                        <h5>[경력직] 원주시 축산작업 구인합니다.</h5>
+                        </th>
                         <p class="small date">
-                            Posted on: 3 Oct 2013 <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
+                            [축산인부 단기/장기 구합니다.]
+                           <span class="has-tip tip-top" data-width="90" title="6 comments"><img src="http://www.wowthemes.net/demo/studiofrancesca/images/comments.png" alt=""></span>
                         </p>
                         <p>
-                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/nivo3.jpg" alt="" class="thumb"> She was the Field Marshal of the Front Porch Knitting Needle Hussars, nicknamed "Hussies." Her approbation was olive oil;
-                            her discountenance prickly heat. "Of course," she added, "while recognizing that expatiation ...
+                            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/nivo3.jpg" alt="" class="thumb">
+                         특별히 어려운 일은 없지만 그래도 힘쓰는 일을 잘하시는 분을 모집합니다.
+
                         </p>
+                        <th>
+                            Posted on: 11 Oct 2021
+                        </th>
                         <p>
                             <a href="#" class="small continue">Continue reading</a>
                         </p>
@@ -249,10 +281,10 @@
             <div class="four columns">
                 <h6 class="sidebartitle">내 농장 목록</h6>
                 <div class="#">
-                    <a href="#" class="success button">구인 작성</a>
+                    <a th:href="@{/board/write}" class="success button">구인 작성</a>
                 </div>
                 <div class="#">
-                    <a href="#" class="success button">내 구인 목록</a>
+                    <a th:href="@{/board/list}" class="success button">내 구인 목록</a>
                 </div>
 
                 <br class="clear" />
