--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,7 +68,7 @@
                     <li>
                         <a href="#">이주노동자</a>
                         <ul>
-                            <li><a th:href="@{/migrant1}">일하기</a></li>
+                            <li><a th:href="@{/migrant}">일하기</a></li>
                             <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                             <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
@@ -220,7 +220,7 @@
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/migrant1}">
+                    <a th:href="@{/migrant}">
                         <span class="ca-icon"><i class="fa fa-krw"></i></span>
                         <div class="ca-content">
                             <h2 class="ca-main">이주민<br/>일 구하기</h2>
@@ -268,9 +268,9 @@
             </p>
         </div>
         <div class="four columns">
-            <h5>이주민 번역 지원</h5>
+            <h5>이주민 지원</h5>
             <p>
-                모드니는 이주민과 이주 여성들이 읽기 쉬운 언어로 번역 지원을 하고 있습니다.<br/><br/>이주민과 이주 여성들의 외국인 근로자의 인력 정보등록을 장려하고 결혼이민 비자를 받아 한국에 체류하고 있는 이주여성의 경제적 자립을 지원합니다.
+                나누모아는 이주민과 이주 여성들의 외국인 근로자의 인력 정보등록을 장려합니다.<br/><br/> 또한 결혼이민 비자를 받아 한국에 체류하고 있는 이주여성의 경제적 자립을 지원합니다.
             </p>
             <p>
                 <a th:href="@{/migrant2}" class="readmore" style="margin-left: 100px;">더보기</a>
