--- a/src/main/resources/templates/many_find.html
+++ b/src/main/resources/templates/many_find.html
@@ -67,7 +67,7 @@
                 <li>
                     <a href="#">이주노동자</a>
                     <ul>
-                        <li><a th:href="@{/migrant1}">일하기</a></li>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
                         <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                         <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
@@ -330,20 +330,20 @@
     <!-- JAVASCRIPTS
 ================================================== -->
     <!-- Javascript files placed here for faster loading -->
-    <script src="../static/javascripts/foundation.min.js"></script>
-    <script src="../static/javascripts/jquery.cycle.js"></script>
-    <script src="../static/javascripts/app.js"></script>
-    <script src="../static/javascripts/modernizr.foundation.js"></script>
-    <script src="../static/javascripts/slidepanel.js"></script>
-    <script src="../static/javascripts/scrolltotop.js"></script>
-    <script src="../static/javascripts/hoverIntent.js"></script>
-    <script src="../static/javascripts/superfish.js"></script>
-    <script src="../static/javascripts/responsivemenu.js"></script>
-    <script src="../static/javascripts/jquery.tweet.js"></script>
+    <script th:src="@{/javascripts/foundation.min.js}"></script>
+    <script th:src="@{/javascripts/jquery.cycle.js}"></script>
+    <script th:src="@{/javascripts/app.js}"></script>
+    <script th:src="@{/javascripts/modernizr.foundation.js}"></script>
+    <script th:src="@{/javascripts/slidepanel.js}"></script>
+    <script th:src="@{/javascripts/scrolltotop.js}"></script>
+    <script th:src="@{/javascripts/hoverIntent.js}"></script>
+    <script th:src="@{/javascripts/superfish.js}"></script>
+    <script th:src="@{/javascripts/responsivemenu.js}"></script>
+    <script th:src="@{/javascripts/jquery.tweet.js}"></script>
 
-    <script src="../static/javascripts/jquery.isotope.min.js"></script>
-    <script src="../static/javascripts/jquery.prettyPhoto.js"></script>
-    <script src="../static/javascripts/custom.js"></script>
+    <script th:src="@{/javascripts/jquery.isotope.min.js}"></script>
+    <script th:src="@{/javascripts/jquery.prettyPhoto.js}"></script>
+    <script th:src="@{/javascripts/custom.js}"></script>
 
 </body>
 
