--- a/src/main/resources/templates/migrant.html
+++ b/src/main/resources/templates/migrant.html
@@ -67,7 +67,7 @@
                 <li>
                     <a href="#">이주노동자</a>
                     <ul>
-                        <li><a th:href="@{/migrant1}">일하기</a></li>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
                         <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                         <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
@@ -104,8 +104,6 @@
     </div>
 </div>
 
-<div class="clear">
-</div>
 <!-- SUBHEADER
 ================================================== -->
 <div id="subheader">
@@ -122,7 +120,7 @@
 
 <!-- CONTENT ================================================== -->
 
-<div class="migrant1" class="migrant1">
+<div class="migrant1">
     <ul>
 
         <li>
