--- a/src/main/resources/templates/migrant2.html
+++ b/src/main/resources/templates/migrant2.html
@@ -67,7 +67,7 @@
                 <li>
                     <a href="#">이주노동자</a>
                     <ul>
-                        <li><a th:href="@{/migrant1}">일하기</a></li>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
                         <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                         <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
@@ -130,7 +130,7 @@
                         - 01 -<br/>Translate<br/>Language
                     </div>
                 </div>
-                <h4>다양한 번역지원<span class="comments">베트남, 말레이시아, 필리핀 등</span></h4>
+                <h4>다양한 사회지원<span class="comments">베트남, 말레이시아, 필리핀 등</span></h4>
                 <div class="dots blogdots">
                 </div>
                 <p>
