--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -1,29 +1,144 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-  <meta charset="UTF-8">
-  <title>게시글 리스트 페이지</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Nanumoa</title>
+
+  <link rel="stylesheet" th:href="@{/stylesheets/style.css}">
+  <link rel="stylesheet" th:href="@{/stylesheets/skins/blue.css}">
+  <link rel="stylesheet" th:href="@{/stylesheets/responsive.css}">
+  <link rel="stylesheet" th:href="@{/css/css.css}">
+
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+
 </head>
 
-<style>
-
-  .layout {
-    width : 500px;
-    margin : 0 auto;
-    margin-top : 40px;
-  }
-
-</style>
-
 <body>
+<!-- HIDDEN PANEL
+================================================== -->
+<div id="panel">
+  <div class="row">
+    <div class="twelve columns">
+      <img src="http://www.wowthemes.net/demo/studiofrancesca/images/info.png" class="pics" alt="info">
+      <div class="infotext">
+        Thank you for visiting my theme! Replace this with your message to visitors.
+      </div>
+    </div>
+  </div>
+</div>
+<p class="slide">
+  <a href="#" class="btn-slide"></a>
+</p>
+<!-- HEADER
+================================================== -->
+<div class="row">
+  <div class="headerlogo four columns">
+    <div class="logo">
+      <a th:href="@{/}">
+        <img th:src="@{/i/nanumoa.png}" style="width:365px; height:75px;  margin: -30px 0 -30px -20px;">
+      </a>
+    </div>
+  </div>
+  <div class="headermenu eight columns noleftmarg">
+    <nav id="nav-wrap">
+      <ul id="main-menu" class="nav-bar sf-menu" style="font-weight: bolder;">
+        <li class="current">
+          <a th:href="@{/}">Home</a>
+        </li>
+        <li class="current">
+          <a href="#">기업소개</a>
+          <ul>
+            <li><a th:href="@{/about}">소개 및 인사말</a></li>
+            <li><a th:href="@{/services}">주요 뉴스</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">농장주</a>
+          <ul>
+            <li><a th:href="@{/farmer1}">사람 구하기</a></li>
+            <li><a th:href="@{/farmer2}">농장주 지원</a></li>
+            <li><a th:href="@{/farmer3}">온라인 농업 기초 교육</a></li>
 
-<div class="layout">
+          </ul>
+        </li>
+        <li>
+          <a href="#">이주노동자</a>
+          <ul>
+            <li><a th:href="@{/migrant}">일하기</a></li>
+            <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
+            <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
-  <table>
+          </ul>
+        </li>
+        <li>
+          <a href="#">모드니로</a>
+          <ul>
+            <li><a th:href="@{/many/find}">자주 찾는 일의 종류</a></li>
+            <li><a th:href="@{/elements}">투자자 문의</a></li>
+            <li><a th:href="@{/typography}">사업자 문의</a></li>
+          </ul>
+        </li>
+        <li>
+          <a th:href="@{/help}">고객문의</a>
+        </li>
+        <!--                    <li>-->
+        <!--                        <span sec:authentication="name"></span>님 환영합니다.-->
+        <!--                    </li>-->
+        <li sec:authorize="isAnonymous()">
+          <a th:href="@{/login}">
+            <button class="login button">로그인</button>
+          </a>
+        </li>
+        <li sec:authorize="isAuthenticated()">
+          <form id="logout" action="/logout" method="POST">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <input type="submit" class="login button" value="로그아웃"/>
+          </form>
+        </li>
+
+      </ul>
+    </nav>
+  </div>
+</div>
+
+<div class="clear">
+</div>
+<!-- SUBHEADER
+================================================== -->
+<div id="subheader">
+  <div class="row">
+    <div class="eight columns">
+      <p class="bread leftalign">
+        <a href="farmer1.html">구인 게시글 작성</a>
+      </p>
+    </div>
+  </div>
+</div>
+<div class="hr">
+</div>
+
+<!--CONTENT-->
+
+<div class="board_wrap">
+  <div class="board_title">
+    <strong>공지사항</strong>
+    <p>공지사항을 빠르고 정확하게 안내해드립니다.</p>
+  </div>
+  <div class="board_list_wrap">
+    <div class="board_list">
+      <div class="top">
+        <table style="width: 100%;">
     <thead>
     <tr>
-      <th>글번호</th>
-      <th>제목</th>
+      <th class="num">글번호</th>
+      <th class="title">제목</th>
+      <th class="writer">작성자</th>
     </tr>
     </thead>
     <tbody>
@@ -32,19 +147,85 @@
       <td>
         <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"></a>
       </td>
+      <td th:text="${board.userInfo.email}"></td>
     </tr>
     </tbody>
   </table>
+      </div>
+    </div>
+  </div>
 
-  <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
-    <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page - 1}, searchKeyword = ${param.searchKeyword})}" th:text="${page}"></a>
-    <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
-  </th:block>
+<!--  <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">-->
+<!--    <a th:href="@{/board/list(page = ${page - 1}, searchKeyword = ${param.searchKeyword})}" th:text="${page}"></a>-->
+<!--    <strong th:text="${page}" style="color : red"></strong>-->
+<!--  </th:block>-->
   <form th:action="@{/board/list}" method="get">
     <input type="text" name="searchKeyword">
     <button type="submit">검색</button>
   </form>
+
+
 </div>
 
+<!-- FOOOTER ================================================== -->
+<div class="clear">
+</div>
+
+<div id="footer">
+  <footer class="row">
+    <p class="back-top floatright">
+      <a href="#top"><span></span></a>
+    </p>
+    <div class="four columns">
+      <h1>ABOUT US</h1>
+      Our goal is to keep clients satisfied!
+    </div>
+    <div class="four columns">
+      <h1>GET SOCIAL</h1>
+      <a class="social facebook" href="#"></a>
+      <a class="social twitter" href="#"></a>
+      <a class="social deviantart" href="#"></a>
+      <a class="social flickr" href="#"></a>
+      <a class="social dribbble" href="#"></a>
+    </div>
+    <div class="four columns">
+      <h1 class="newsmargin">NEWSLETTER</h1>
+      <div class="row collapse newsletter floatright">
+        <div class="ten mobile-three columns">
+          <input type="text" class="nomargin" placeholder="Enter your e-mail address...">
+        </div>
+        <div class="two mobile-one columns">
+          <a href="#" class="postfix button expand">GO</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
+<div class="copyright">
+  <div class="row">
+    <div class="six columns">
+      &copy;<span class="small"> Copyright Your Agency Name</span>
+    </div>
+    <div class="six columns">
+      <span class="small floatright">Design by <a target="_blank" href="http://www.wowthemes.net/premium-themes-templates/">WowThemesNet</a> </span>
+    </div>
+  </div>
+</div>
+<!-- JAVASCRIPTS
+================================================== -->
+<!-- Javascript files placed here for faster loading -->
+<script th:src="@{/javascripts/foundation.min.js}"></script>
+<script th:src="@{/javascripts/jquery.easing.1.3.js}"></script>
+<script th:src="@{/javascripts/elasticslideshow.js}"></script>
+<script th:src="@{/javascripts/jquery.carouFredSel-6.0.5-packed.js}"></script>
+<script th:src="@{/javascripts/jquery.cycle.js}"></script>
+<script th:src="@{/javascripts/app.js}"></script>
+<script th:src="@{/javascripts/modernizr.foundation.js}"></script>
+<script th:src="@{/javascripts/slidepanel.js}"></script>
+<script th:src="@{/javascripts/scrolltotop.js}"></script>
+<script th:src="@{/javascripts/hoverIntent.js}"></script>
+<script th:src="@{/javascripts/superfish.js}"></script>
+<script th:src="@{/javascripts/responsivemenu.js}"></script>
 </body>
+
 </html>
