--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -1,14 +1,289 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org"  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <meta charset="UTF-8">
-    <title>게시글 상세 페이지</title>
-</head>
-<body>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Nanumoa</title>
 
-<h1 th:text="${board.title}">제목입니다.</h1>
-<p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
-<a th:href="@{${board.filepath}}">다운받기</a>
-<a th:href="@{/board/modify/{id}(id = ${board.id})}">수정</a>
+    <link rel="stylesheet" th:href="@{/stylesheets/style.css}">
+    <link rel="stylesheet" th:href="@{/stylesheets/skins/blue.css}">
+    <link rel="stylesheet" th:href="@{/stylesheets/responsive.css}">
+
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+</head>
+
+<body>
+<!-- HIDDEN PANEL
+================================================== -->
+<div id="panel">
+    <div class="row">
+        <div class="twelve columns">
+            <img src="http://www.wowthemes.net/demo/studiofrancesca/images/info.png" class="pics" alt="info">
+            <div class="infotext">
+                Thank you for visiting my theme! Replace this with your message to visitors.
+            </div>
+        </div>
+    </div>
+</div>
+<p class="slide">
+    <a href="#" class="btn-slide"></a>
+</p>
+<!-- HEADER
+================================================== -->
+<div class="row">
+    <div class="headerlogo four columns">
+        <div class="logo">
+            <a th:href="@{/}">
+                <img th:src="@{/i/nanumoa.png}" style="width:365px; height:75px;  margin: -30px 0 -30px -20px;">
+            </a>
+        </div>
+    </div>
+    <div class="headermenu eight columns noleftmarg">
+        <nav id="nav-wrap">
+            <ul id="main-menu" class="nav-bar sf-menu" style="font-weight: bolder;">
+                <li class="current">
+                    <a th:href="@{/}">Home</a>
+                </li>
+                <li class="current">
+                    <a href="#">기업소개</a>
+                    <ul>
+                        <li><a th:href="@{/about}">소개 및 인사말</a></li>
+                        <li><a th:href="@{/services}">주요 뉴스</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">농장주</a>
+                    <ul>
+                        <li><a th:href="@{/farmer1}">사람 구하기</a></li>
+                        <li><a th:href="@{/farmer2}">농장주 지원</a></li>
+                        <li><a th:href="@{/farmer3}">온라인 농업 기초 교육</a></li>
+
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">이주노동자</a>
+                    <ul>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
+                        <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
+                        <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
+
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">모드니로</a>
+                    <ul>
+                        <li><a th:href="@{/many/find}">자주 찾는 일의 종류</a></li>
+                        <li><a th:href="@{/elements}">투자자 문의</a></li>
+                        <li><a th:href="@{/typography}">사업자 문의</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a th:href="@{/help}">고객문의</a>
+                </li>
+                <!--                    <li>-->
+                <!--                        <span sec:authentication="name"></span>님 환영합니다.-->
+                <!--                    </li>-->
+                <li sec:authorize="isAnonymous()">
+                    <a th:href="@{/login}">
+                        <button class="login button">로그인</button>
+                    </a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <form id="logout" action="/logout" method="POST">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="submit" class="login button" value="로그아웃"/>
+                    </form>
+                </li>
+
+            </ul>
+        </nav>
+    </div>
+</div>
+
+<div class="clear">
+</div>
+
+<!-- SUBHEADER
+================================================== -->
+<div id="subheader">
+    <div class="row">
+        <div class="eight columns">
+            <p class="bread leftalign">
+                <a th:href="@{farmer1}"></a>
+            </p>
+        </div>
+    </div>
+</div>
+<div class="hr">
+</div>
+
+<!--CONTENT-->
+
+<div class="row">
+    <div class="twelve columns noleftmargin">
+        <!-- MAIN CONTENT -->
+        <div class="eight columns">
+            <div class="sectiontitle">
+                <h4 th:text="${board.title}" >제목</h4>
+            </div>
+            <p>
+                <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/post.jpg" class="blogimage grayscale" alt="">
+            </p>
+            <p th:text="${board.content}"></p>
+
+            <br/>
+            <div class="panel">
+<!--                <div class="avatar">-->
+<!--&lt;!&ndash;                    <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/author1.png" alt="">&ndash;&gt;-->
+<!--                </div>-->
+                <h5 class="left"> </h5>
+                <div class="right">
+<!--                    <div class="social facebook">-->
+<!--                        <a href="#"></a>-->
+<!--                    </div>-->
+<!--                    <div class="social twitter">-->
+<!--                        <a href="#"></a>-->
+<!--                    </div>-->
+<!--                    <div class="social deviantart">-->
+<!--                        <a href="#"></a>-->
+<!--                    </div>-->
+<!--                    <div class="social flickr">-->
+<!--                        <a href="#"></a>-->
+<!--                    </div>-->
+<!--                    <div class="social dribbble">-->
+<!--                        <a href="#"></a>-->
+<!--                    </div>-->
+                </div>
+                <p class="clear authortext" th:text="${board.userInfo.email}">
+                </p>
+            </div>
+<!--            <h5>1 Comment</h5>-->
+<!--            <hr>-->
+<!--            <div class="gravatar">-->
+<!--&lt;!&ndash;                <img src="http://www.wowthemes.net/demo/studiofrancesca/images/gravatar.png" alt="">&ndash;&gt;-->
+<!--            </div>-->
+<!--            <h5>Sam-->
+<!--                <span class="commentdate">-->
+<!--				- October 26, 2013 at 9:39 am-->
+<!--			</span>-->
+<!--            </h5>-->
+
+<!--            <p>-->
+<!--                But she cuddled in bed with one knee up to her neck in cute boyish fashion, laughing softly at the remembrance of another time when she had popped a cigarette stump into the eye of a London bobby from the top of a bus. Temporibus autem quibusdam.-->
+<!--            </p>-->
+<!--            <br class="clear">-->
+<!--            <h5>SPEAK YOUR MIND</h5>-->
+<!--            <input type="text" class="five smoothborder" placeholder="Your name *" />-->
+<!--            <input type="text" class="five smoothborder" placeholder="E-mail address *" />-->
+<!--            <input type="text" class="five smoothborder" placeholder="Website" />-->
+<!--            <textarea class="six smoothborder" rows="7" placeholder="Comments *"></textarea>-->
+<!--            <button type="submit" class="readmore">Publish</button>-->
+        </div>
+        <!-- SIDEBAR -->
+        <div class="four columns">
+            <h6 class="sidebartitle">RECENT COMMENTS</h6>
+            <div class="avatar">
+                <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/author1.png" alt="">
+            </div>
+            <p>
+                Many pieces were proposed, but none seemed suitable, because each one wished to play a good ...
+            </p>
+            <div class="avatar">
+                <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/author2.png" alt="">
+            </div>
+            <p>
+                Many pieces were proposed, but none seemed suitable, because each one wished to play a good ...
+            </p>
+            <div class="avatar">
+                <img src="http://www.wowthemes.net/demo/studiofrancesca/images/temp/author3.png" alt="">
+            </div>
+            <p>
+                Many pieces were proposed, but none seemed suitable, because each one wished to play a good ...
+            </p>
+            <br class="clear" />
+            <h6 class="sidebartitle">인기 태그</h6>
+            <a href="#" class="tags">하우스</a>
+            <a href="#" class="tags">분류작업</a>
+            <a href="#" class="tags">수확</a>
+            <a href="#" class="tags">비료살포</a>
+            <a href="#" class="tags">포장</a>
+            <a href="#" class="tags">수분작업</a>
+            <a href="#" class="tags">중장비</a>
+            <a href="#" class="tags">단기작업</a>
+            <a href="#" class="tags">숙식제공</a>
+            <a href="#" class="tags">최저시급</a>
+            <br class="clear" />
+            <br/><br/>
+        </div>
+    </div>
+</div>
+<div class="hr">
+</div>
+
+<!-- FOOOTER ================================================== -->
+<div class="clear">
+</div>
+
+<div id="footer">
+    <footer class="row">
+        <p class="back-top floatright">
+            <a href="#top"><span></span></a>
+        </p>
+        <div class="four columns">
+            <h1>ABOUT US</h1>
+            Our goal is to keep clients satisfied!
+        </div>
+        <div class="four columns">
+            <h1>GET SOCIAL</h1>
+            <a class="social facebook" href="#"></a>
+            <a class="social twitter" href="#"></a>
+            <a class="social deviantart" href="#"></a>
+            <a class="social flickr" href="#"></a>
+            <a class="social dribbble" href="#"></a>
+        </div>
+        <div class="four columns">
+            <h1 class="newsmargin">NEWSLETTER</h1>
+            <div class="row collapse newsletter floatright">
+                <div class="ten mobile-three columns">
+                    <input type="text" class="nomargin" placeholder="Enter your e-mail address...">
+                </div>
+                <div class="two mobile-one columns">
+                    <a href="#" class="postfix button expand">GO</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+<div class="copyright">
+    <div class="row">
+        <div class="six columns">
+            &copy;<span class="small"> Copyright Your Agency Name</span>
+        </div>
+        <div class="six columns">
+            <span class="small floatright">Design by <a target="_blank" href="http://www.wowthemes.net/premium-themes-templates/">WowThemesNet</a> </span>
+        </div>
+    </div>
+</div>
+<!-- JAVASCRIPTS
+================================================== -->
+<!-- Javascript files placed here for faster loading -->
+<script th:src="@{/javascripts/foundation.min.js}"></script>
+<script th:src="@{/javascripts/jquery.easing.1.3.js}"></script>
+<script th:src="@{/javascripts/elasticslideshow.js}"></script>
+<script th:src="@{/javascripts/jquery.carouFredSel-6.0.5-packed.js}"></script>
+<script th:src="@{/javascripts/jquery.cycle.js}"></script>
+<script th:src="@{/javascripts/app.js}"></script>
+<script th:src="@{/javascripts/modernizr.foundation.js}"></script>
+<script th:src="@{/javascripts/slidepanel.js}"></script>
+<script th:src="@{/javascripts/scrolltotop.js}"></script>
+<script th:src="@{/javascripts/hoverIntent.js}"></script>
+<script th:src="@{/javascripts/superfish.js}"></script>
+<script th:src="@{/javascripts/responsivemenu.js}"></script>
 </body>
+
 </html>
