--- a/src/main/resources/templates/career_write.html
+++ b/src/main/resources/templates/career_write.html
@@ -68,7 +68,7 @@
                 <li>
                     <a href="#">이주노동자</a>
                     <ul>
-                        <li><a th:href="@{/migrant1}">일하기</a></li>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
                         <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                         <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
@@ -152,7 +152,7 @@
 
     <body>
         <table style="border: 1em;">
-            <h1 style="margin-bottom: 30px;">
+            <h1 style=" margin: auto; padding: 20px; width: fit-content;">
                 이력서 </h1>
             <table border="0">
                 <tr>
@@ -355,14 +355,13 @@
                         <a th:href="@{/career_write}" class="save1 button">저장</a>
                     </li>
                     <li>
-                        <a th:href="@{/migrant1}" class="back1 button">목록</a>
+                        <a th:href="@{/migrant}" class="back1 button">목록</a>
                     </li>
                 </ul>
             </div>
         </table>
     </body>
 
-</html>
 
 
 <!-- FOOOTER ================================================== -->
