--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,7 +67,7 @@
                 <li>
                     <a href="#">이주노동자</a>
                     <ul>
-                        <li><a th:href="@{/migrant1}">일하기</a></li>
+                        <li><a th:href="@{/migrant}">일하기</a></li>
                         <li><a th:href="@{/migrant2}">이주 여성 지원</a></li>
                         <li><a th:href="@{/migrant3}">이주민 농업 기초 교육</a></li>
 
